plugins/rocks.xml.webhelp/resources/css/layout-common.css
@font-face {
    font-family: 'Montserrat';
    font-style: normal;
    font-weight: 100;
    src: local(''),
    url('../fonts/Montserrat/Montserrat-Thin.ttf') format('truetype');
}

@font-face {
    font-family: 'Montserrat';
    font-style: italic;
    font-weight: 100;
    src: local(''),
    url('../fonts/Montserrat/Montserrat-ThinItalic.ttf') format('truetype');
}

@font-face {
    font-family: 'Montserrat';
    font-style: normal;
    font-weight: 200;
    src: local(''),
    url('../fonts/Montserrat/Montserrat-ExtraLight.ttf') format('truetype');
}

@font-face {
    font-family: 'Montserrat';
    font-style: italic;
    font-weight: 200;
    src: local(''),
    url('../fonts/Montserrat/Montserrat-ExtraLightItalic.ttf') format('truetype');
}

@font-face {
    font-family: 'Montserrat';
    font-style: normal;
    font-weight: 300;
    src: local(''),
    url('../fonts/Montserrat/Montserrat-Light.ttf') format('truetype');
}

@font-face {
    font-family: 'Montserrat';
    font-style: italic;
    font-weight: 300;
    src: local(''),
    url('../fonts/Montserrat/Montserrat-LightItalic.ttf') format('truetype');
}

@font-face {
    font-family: 'Montserrat';
    font-style: normal;
    font-weight: 400;
    src: local(''),
    url('../fonts/Montserrat/Montserrat-Regular.ttf') format('truetype');
}

@font-face {
    font-family: 'Montserrat';
    font-style: italic;
    font-weight: 400;
    src: local(''),
    url('../fonts/Montserrat/Montserrat-Italic.ttf') format('truetype');
}

@font-face {
    font-family: 'Montserrat';
    font-style: normal;
    font-weight: 500;
    src: local(''),
    url('../fonts/Montserrat/Montserrat-Medium.ttf') format('truetype');
}

@font-face {
    font-family: 'Montserrat';
    font-style: italic;
    font-weight: 500;
    src: local(''),
    url('../fonts/Montserrat/Montserrat-MediumItalic.ttf') format('truetype');
}

@font-face {
    font-family: 'Montserrat';
    font-style: normal;
    font-weight: 600;
    src: local(''),
    url('../fonts/Montserrat/Montserrat-SemiBold.ttf') format('truetype');
}

@font-face {
    font-family: 'Montserrat';
    font-style: italic;
    font-weight: 600;
    src: local(''),
    url('../fonts/Montserrat/Montserrat-SemiBoldItalic.ttf') format('truetype');
}

@font-face {
    font-family: 'Montserrat';
    font-style: normal;
    font-weight: 700;
    src: local(''),
    url('../fonts/Montserrat/Montserrat-Bold.ttf') format('truetype');
}

@font-face {
    font-family: 'Montserrat';
    font-style: italic;
    font-weight: 700;
    src: local(''),
    url('../fonts/Montserrat/Montserrat-BoldItalic.ttf') format('truetype');
}

@font-face {
    font-family: 'Montserrat';
    font-style: normal;
    font-weight: 800;
    src: local(''),
    url('../fonts/Montserrat/Montserrat-ExtraBold.ttf') format('truetype');
}

@font-face {
    font-family: 'Montserrat';
    font-style: italic;
    font-weight: 800;
    src: local(''),
    url('../fonts/Montserrat/Montserrat-ExtraBoldItalic.ttf') format('truetype');
}

@font-face {
    font-family: 'Montserrat';
    font-style: normal;
    font-weight: 900;
    src: local(''),
    url('../fonts/Montserrat/Montserrat-Black.ttf') format('truetype');
}

@font-face {
    font-family: 'Montserrat';
    font-style: italic;
    font-weight: 900;
    src: local(''),
    url('../fonts/Montserrat/Montserrat-BlackItalic.ttf') format('truetype');
}

:root {
    --bs-font-sans-serif: 'Montserrat', sans-serif;
    color: #404040;
    scroll-behavior: auto;
}

.accent-background-color {
    background-color: #0c213a;
}

.max-width {
    max-width: 1100px;
}


/* --- Main bar START --- */
.rocks-header {
    position: relative;
    background-color: var(--header-bg-color);
    -webkit-backdrop-filter: blur(10px);
    backdrop-filter: blur(10px);
}

.main-header {
    padding: 1rem;
    margin-left: auto;
    margin-right: auto;
}

.header-logo {
    content: url('../images/logo.svg');
    max-height: 2em;
    margin-right: 1em;
}

.header-search-wrapper {
    display: grid;
    margin-left: auto;
}

.search {
    border: none;
    border-radius: 30px;
    width: 304px;
    grid-column-start: 1;
    grid-column-end: -1;
    grid-row-start: 1;
}

.rocks-header .search {
    padding-right: 80px;
}

#search-button{
    background: url(../images/search.svg) center no-repeat;
    width: 40px;
    grid-column-start: 1;
    grid-column-end: -1;
    grid-row-start: 1;
    justify-self: end;
}

/* clears the 'X' from Internet Explorer */
input#header-search-input::-ms-clear,
input#header-search-input::-ms-reveal,
.search-input-container > input.search-input::-ms-clear,
.search-input-container > input.search-input::-ms-reveal {
    display: none;
    width: 0;
    height: 0;
}

/* clears the 'X' from Chrome */
input#header-search-input::-webkit-search-decoration,
input#header-search-input::-webkit-search-cancel-button,
input#header-search-input::-webkit-search-results-button,
input#header-search-input::-webkit-search-results-decoration,
.search-input-container > input.search-input::-webkit-search-decoration,
.search-input-container > input.search-input::-webkit-search-cancel-button,
.search-input-container > input.search-input::-webkit-search-results-button,
.search-input-container > input.search-input::-webkit-search-results-decoration {
    display: none;
}

#search-cancel-button,
#sticky-search-cancel-button {
    background: url(../images/search-close.svg) center no-repeat;
    width: 40px;
    grid-column-start: 1;
    grid-column-end: -1;
    grid-row-start: 1;
    justify-self: end;
    margin-right: 40px;
    display: none;
    z-index: 1;
}

.search-buttons-separator {
    margin: 0.6rem 0;
}

.sticky-search-buttons-separator {
    margin: 0.75rem 0;
}

.search-buttons-separator,
.sticky-search-buttons-separator {
    border-left: 1px solid #e7e7e7;
    display: none;
    height: 1rem;
    grid-column-start: 1;
    grid-column-end: -1;
    grid-row-start: 1;
    justify-self: end;
    margin-right: 40px;
}

#search-cancel-button.show,
#sticky-search-cancel-button.show,
#search-cancel-button.show + .search-buttons-separator,
#sticky-search-cancel-button.show + .sticky-search-buttons-separator {
    display: block;
}
/* --- Main bar END --- */

/* --- Footer START --- */
.footer-container {
    background-color: var(--footer-bg-color);
    display: block;
    margin-left: auto;
    margin-right: auto;
    position: relative;
}

.footer-div {
    margin-left: auto;
    margin-right: auto;
}

.footer-text {
    padding: 1rem;
    text-decoration: none;
    color: #999999;
    font-size: 15px;
}
/* --- Footer END --- */

